# assessments

./: README.md  start_all.sh
assignment1-rust-backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
assignment1-rust-backend/src/: db.rs  lib.rs  main.rs  models.rs  parser.rs
assignment1-rust-backend/tests/: api_tests.rs
assignment2-fullstack-integration/: README.md
assignment2-fullstack-integration/frontend/: jest.config.ts  package-lock.json  package.json
assignment2-fullstack-integration/frontend/app/: globals.css  layout.tsx
assignment2-fullstack-integration/frontend/app/api/certificates/: route.ts
assignment2-fullstack-integration/frontend/app/inventory/: inventory-client.tsx  page.tsx
assignment2-fullstack-integration/frontend/components/: CertificateCard.tsx  CertificateDetail.tsx  PemImportForm.tsx  StatCard.tsx
assignment2-fullstack-integration/frontend/components/__tests__/: CertificateCard.test.tsx  StatCard.test.tsx
assignment3-nextjs-inventory/: README.md
assignment3-nextjs-inventory/frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json
assignment3-nextjs-inventory/frontend/app/: globals.css  layout.tsx
assignment3-nextjs-inventory/frontend/app/inventory/: client-dashboard.tsx  data-generator.ts  page.tsx
assignment3-nextjs-inventory/frontend/app/inventory/[id]/: page.tsx
assignment3-nextjs-inventory/frontend/components/: InventoryRow.tsx  MetricCard.tsx  TableSkeleton.tsx
assignment3-nextjs-inventory/frontend/components/__tests__/: InventoryRow.test.tsx  MetricCard.test.tsx
