[package]
name = "certificate-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
x509-parser = "0.15.1"
pem = "3.0.3"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = "0.12.0" # Bonus: programmatically generate certs for tests

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
